@@ -1,6 +1,7 @@
 2011-01-17  Steffen Kamper  <steffen@typo3.org>
 
-	* Fixed issue #17017: New pagetree doesn't work with all web submodules
+	* Fixed bug #17074: Allow core navigation components (Thanks to Stefan Galinski)
+	* Fixed bug #17017: New pagetree doesn't work with all web submodules
 
 2011-01-16  Francois Suter  <francois.suter@typo3.org>
 
